2005-10-21
<pablo@eurodev.net>
	o Bumped version to 0.90
	o Add support for id and marks

2005-10-20
<pablo@eurodev.net>
	o Kill some more files that generated by the autocrap
	o Resync with the lastest libnetfilter_conntrack API changes

2005-10-16
<pablo@netfilter.org>
	o Rename libct_proto.h to conntrack.h
	o Remove config.h.in from svn, it's autogenerated by the autocrap :)
	o Remove dead functions in the SCTP protocol helper

2005-10-14
<pablo@netfilter.org>
	o Kill config.h.in, it's generated by the autocrap
	o The conntrack tool now uses libnetfilter_conntrack :)
	o libct.c has been killed, now it's in libnetfilter_conntrack
	o Check if you're root or CAP_NET_ADMIN
	o Bumped version number to 0.86

2005-10-07
<chentschel@iplan.com.ar>
	o Fixed ICMP options
<pablo@netfilter.org>
	o Multiple fixes for the ICMP protocol handler
	o Fix ICMP output: wrong output. type and code were set to zero.

2005-10-05
<pablo@netfilter.org>
	o Fix up counters
	o Fix up compilation (IPS_* stuff missing), still need a proper fix
	o Bumped version number to 0.82

2005-09-24
<laforge@netfilter.org>
	o Get rid of C++ style comments
	o Remove remaining bits of "-A --action", group-mask and dump-mask
	o Clean up #include's
	o Fix double-free when exiting via signal handler (Ctrl+C)
	o Add "version" member to plugins
	o Fix some Endianness issues when printing CTA_STATUS

2005-08-31
<pablo@netfilter.org>
	o Fix packet and bytes counters (use __be64_to_cpu)
	o Fix ip_conntrack_netlink load-on-demand

2005-07-12
<pablo@eurodev.net>
	o Use conntrack netlink attributes: Major change
	o Kill action setting: Mask based dumping
	o Fix ChangeLog

2005-05-23
<laforge@netfilter.org>
	o Fixed syntax error (tab/space issue) in help message
	o Fixed getopt handling on big endian machines
	o Fixed possible future read-over-end-of-array in TCP extension
	o Add manpage
	o Add missing space at output of libct_proto_icmp.c
	o Add status bits that were introduced in 2.6.11
	o Add SCTP extension